adding apptwo with another form

--- a/template/appone/index.html
+++ b/template/appone/index.html
@@ -11,7 +11,9 @@
 <p>{{ any_var }}</p>
 
 <img src="{% static "images/flower.svg"%}" alt="Flower">
-<button type="button"><a href="/form">Navigate to form</a></button>
+<button type="button"><a href="appone/form">Navigate to Appone Signup Form</a></button>
+<button type="button"><a href="apptwo/form">Navigate to Apptwo Login Form</a></button>
+
 
 <!--{{ form }}
 
