--- a/template/apptwo/index.html
+++ b/template/apptwo/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <h1>Hello Appp 2 </h1>
+<button type="button"><a href="/apptwo/form">Navigate to form</a></button>
 <p>{{ any_var }}</p>
 
 <img src="{% static "images/flower.svg"%}" alt="Flower">
-<button type="button"><a href="appone/form">Navigate to form</a></button>
 
 <!--{{ form }}
 
